Style: redesign entire UI

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-:root {
-  --white: #fff;
-  --light-grey: #f5f6f7;
-  --dark-grey: #0a0a23;
-  --yellow: #f1be32;
-  --golden-yellow: #feac32;
-}
-
 *,
 *::before,
 *::after {
@@ -15,7 +7,10 @@
 }
 
 body {
-  background-color: var(--dark-grey);
+  background-color: #fff;
+  background-image: linear-gradient(#eaeaea 2px, transparent 2px),
+    linear-gradient(to right, #eaeaea 2px, #fff 2px);
+  background-size: 40px 40px;
 }
 
 main {
@@ -26,15 +21,18 @@ main {
 }
 
 h1 {
-  color: var(--light-grey);
+  font-family: "Comfortaa", sans-serif;
+  font-weight: 700;
+  color: #000;
   margin: 20px 0 40px 0;
 }
 
 .todo-app {
-  background-color: var(--white);
+  background-color: #fff;
   width: 300px;
   height: 350px;
-  border: 5px solid var(--yellow);
+  border: 1px solid #000;
+  box-shadow: 10px 10px #191919;
   border-radius: 8px;
   padding: 15px;
   position: relative;
@@ -44,18 +42,30 @@ h1 {
 }
 
 .btn {
+  font-family: "Comfortaa", sans-serif;
   cursor: pointer;
   width: 100px;
   margin: 10px;
-  color: var(--dark-grey);
-  background-color: var(--golden-yellow);
-  background-image: linear-gradient(#fecc4c, #ffac33);
-  border-color: var(--golden-yellow);
-  border-width: 3px;
+  padding: 10px;
+  color: #000;
+  background-color: #faa356;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: 5px 5px #191919;
 }
 
-.btn:hover {
-  background-image: linear-gradient(#ffcc4c, #f89808);
+.edit-btn {
+  background-color: #77bdfb;
+}
+
+.delete-btn,
+#discard-btn {
+  background-color: #fa7970;
+}
+
+.btn:active {
+  transform: translate(1px, 1px);
+  box-shadow: 4px 4px;
 }
 
 .large-btn {
@@ -66,9 +76,17 @@ h1 {
 }
 
 .close-task-form-btn {
-  background: none;
-  border: none;
+  display: flex;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: 3px 3px #191919;
   cursor: pointer;
+}
+
+.close-task-form-btn:active {
+  transform: translate(1px, 1px);
+  box-shadow: 2px 2px #191919;
 }
 
 .close-icon {
@@ -82,8 +100,9 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: var(--white);
-  border-radius: 5px;
+  background-color: #fff;
+  border: 1px solid #000;
+  border-radius: 8px;
   padding: 15px;
   width: 300px;
   height: 350px;
@@ -108,14 +127,9 @@ h1 {
   justify-content: center;
 }
 
-.task-form-label,
-#title-input,
-#date-input,
-#description-input {
-  display: block;
-}
-
 .task-form-label {
+  display: block;
+  font-family: "Comfortaa", sans-serif;
   margin-bottom: 5px;
   font-size: 1.3rem;
   font-weight: bold;
@@ -124,14 +138,20 @@ h1 {
 #title-input,
 #date-input,
 #description-input {
+  display: block;
+  font-family: "IBM Plex Mono", monospace;
   width: 100%;
   margin-bottom: 10px;
   padding: 2px;
+  border: none;
+  border-bottom: 1px solid #000;
 }
 
 #confirm-close-dialog {
   padding: 10px;
-  margin: 10px auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 15px;
 }
 
@@ -142,6 +162,7 @@ h1 {
 }
 
 .discard-message-text {
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
   font-size: 1.5rem;
 }
@@ -149,10 +170,14 @@ h1 {
 #tasks-container {
   height: 100%;
   overflow-y: auto;
+  font-family: "IBM Plex Mono", monospace;
 }
 
 .task {
-  margin: 5px 0;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #000;
+  border-radius: 8px;
 }
 
 .hidden {
